[package]
name = "scentd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
reqwest = "0.12.8"
rumqttc = "0.24.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"
