[package]
name = "scentd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scentd"
path = "src/lib.rs"

[[bin]]
name = "scentd"
path = "src/main.rs"

[[bin]]
name = "inspect_properties"
path = "src/bin/inspect_properties.rs"

[[bin]]
name = "scent"
path = "src/bin/scent.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = { version = "0.12.8",  features = ["json"] }
rumqttc = "0.25.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full", "signal"] }

[dev-dependencies]
mockito = "1.5.0"
tokio-test = "0.4"
serial_test = "3.2.0"
